# snazzy-snowdrops

./: LICENSE.txt  README.md  build-zip.js  index.html  package-lock.json  package.json  pyproject.toml  serve.py
assets/audio/: bgm.json  sfx.json
assets/db/: fruit.json  player.json  stone.json  zombie.json
assets/tilemap/: cj.tmj
assets/tileset/: example.tmj
css/: style.css
js/: index.js  start.js
public/: index.html
public/js/: index.js
scripts/: serve.sh
src/: config.py  game.py  index.html  js.pyi  main.py
src/engine/: __init__.py  camera.py  canvas.py  core.py  event_bus.py  events.py  game_engine.py  input_system.py  interfaces.py  mouse.py  place.py  renderer_system.py  settings.py  sound_system.py  sprites.py  state.py  window.py
src/game/: __init__.py  inventory.py  logic.py  main_loop.py  player.py  world.py
src/game/entities/: entity.py  fruit.py  npc.py  player.py  stone.py  tree.py  zombie.py
src/js/: start.js
src/main/: __init__.py  data.py  game.py  gameloop.py  images.py  player.py  sprites.py  tiles.py
src/menu/: __init__.py  main_menu.py  pause_menu.py  settings_menu.py
src/models/: __init__.py  direction.py  draw_cmd.py  position.py  sprite.py  tile.py
src/puzzles/: __init__.py  sliding_tiles_puzzle.py
src/scenes/: game_scene.py  menu.py
src/ui/: __init__.py  dialog.py  inventory.py  statusbar.py
src/ui/components/: dialog.html  inventory.html  menu.html  statusbar.html
src/ui/menu/: __init__.py  how_to_play_menu.py  main_menu.py  settings_menu.py
src/view/: __init__.py  view_bridge.py
web/: app.js  index.html
