[project]
name = "snazzy_snowdrops"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = ["pyodide-py>=0.28.1", "starlette>=0.47.2", "uvicorn>=0.35.0"]

[tool.pyright]
typeCheckingMode = "standard"
reportMissingModuleSource = false

[tool.ruff.lint]
select = ["ALL"]
extend-safe-fixes = ["ALL"]
ignore = ["D", "COM", "ANN401", "S311", "PLW0603"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
