[project]
name = "snazzy-snowdrops"
version = "0.1.0"
description = "Snazzy Snowdrops - Code Jam 12"
license = "MIT"
license-files = ["LICENSE.txt"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
authors = [
    { name = "base_13" },
    { name = "~afere168421~" },
    { name = "aspizu" },
    { name = "Exponential Three" },
    { name = "Axthe_E_I" },
    { name = "MaxAsif" },
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
ruff = "^0.12.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Increase the line length. This breaks PEP8 but it is way easier to work with.
# The original reason for this limit was a standard vim terminal is only 79 characters,
# but this doesn't really apply anymore.
line-length = 119
# Target Python 3.12. If you decide to use a different version of Python
# you will need to update this value.
target-version = "py312"
# Automatically fix auto-fixable issues.
fix = true
# The directory containing the source code. If you choose a different project layout
# you will need to update this value.
src = ["src"]
exclude = ['assets']

[tool.ruff.lint]
# Enable all linting rules.
select = ["ALL"]
# Ignore some of the most obnoxious linting errors.
ignore = [
    # Missing docstrings.
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "S311",
    "PLR0913",
    "D105",
    "D106",
    "C901",
    "D107",
    "ANN202",
    # Docstring whitespace.
    "D203",
    "D213",
    # Docstring punctuation.
    "D415",
    # Docstring quotes.
    "D301",
    # Builtins.
    "A",
    # Print statements.
    "T20",
    # TODOs.
    "TD002",
    "TD003",
    "FIX",
    "FBT001",
    "FBT002",
    "PGH003",
    "PLR0912"
]
